@@ -1303,6 +1303,13 @@ test(459, DT[, list(sum(v)), list(ifelse(a == 2, NA, 1))], data.table(a=c(1L,NA_
 test(460, DT[, list(sum(v)), list(ifelse(a == 2, 1, NA))], data.table(a=c(NA_integer_,1L),V1=c(26L,13L)))
 test(461, DT[,sum(v),by=a], data.table(a=1:3,V1=c(11L,13L,15L),key="a"))
 
+# Test loading from file (which resets tl to 0 in R 2.14.0+, and unitialized random number in 2.13.2-)
+f = tempfile()
+save(list="DT",file=f)
+load(f)
+test(462, suppressWarnings(DT[,foo:=10L]), data.table(a=1:3,v=4:9,foo=10L,key="a"))
+unlink(f)
+
 
 ## See test-* for more tests
 
